# album_maker

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  dockerfile  index.html  index.js  nginx.conf
design/: captions.html  colors.html  icons.html  links.md
public/: album.css  caption.css  group.css  header.css  notif.css  picture.css  progress.css  slideshow.css  spiner.css  style.css  trip.css  view.css
src/: lib.rs
src/api/: albumapi.rs  api.rs  apifn.rs  mod.rs  sharingapi.rs
src/components/: edit_album.rs  error.rs  forbidden.rs  group.rs  header.rs  login.rs  mod.rs  my_albums.rs  my_sharings.rs  new_album.rs  not_logged.rs  notification.rs  picture.rs  sharings.rs  slideshow.rs  upload.rs  view_album.rs
src/models/: album.rs  caption.rs  group.rs  group_update.rs  mod.rs  notif.rs  oid.rs  page.rs  picture.rs  sharing.rs  state.rs  trip.rs  urls.rs  user.rs  vars.rs
