[package]
version = "0.1.0"
name = "album_maker"
repository = "https://github.com/TuntematonSotilas/album_maker"
authors = ["TuntematonSotilas"]
description = "Album maker"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.9.2"
serde = "1.0.132"
base64 = "0.13.0"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
load-dotenv = "0.1.2"
ring = "0.16.20"
hex = "^0.2"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
